# System-Bot---Dynamite

./: .gitignore  Cargo.toml  README.md
friday-brain/: .env.example  README.md  agents.py  main.py  requirements.txt  tasks.py  tools.py
friday-os-client/: Cargo.toml
friday-os-client/.cargo/: config.toml
friday-os-client/src/: main.rs
src/: main.rs
