[package]
name = "dynamite-daemon"
version = "0.1.0"
edition = "2021"
description = "System Bot Dynamite: Lightweight, offline daemon for AI-assisted OS-level automation"
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Global hotkey listening (OS-level keyboard events)
rdev = "0.5"

# Clipboard access
arboard = "3.3"

# HTTP client for local Ollama API
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Desktop notifications
notify-rust = "4.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (optional but recommended for debugging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
